# foxguard

./: .foxguard.pr540-ignore.yml.bak  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  ARCHITECTURE.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.github-app  LAUNCH.md  README.md  RELEASE_NOTES_v0.10.0.md  RELEASE_NOTES_v0.11.0.md  RELEASE_NOTES_v0.12.0.md  RELEASING.md  SECURITY.md
.foxguard/: baseline.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rule_request.md
.github/workflows/: ci.yml  deploy-www.yml  github-app-image.yml  linux-codeql-dirty-frag.yml  parity-nightly.yml  precision-nightly.yml  release.yml
action/: action.yml  count-terminal-findings.py  entrypoint.sh  test_count_terminal_findings.py
assets/terminalizer/: build_story_gif.rb  config.yml  demo-run.zsh  foxguard-demo.yml  foxguard-story.yml  story-run.zsh
assets/terminalizer/demo-target/: routes.js  services.js
assets/terminalizer/story-target/: routes.js
benchmarks/: .gitignore  README.md  compare_versions.py  run-multi.sh  run.sh
benchmarks/compat_rules/: go.yaml  javascript.yaml  python.yaml
benchmarks/parity/: .gitignore  README.md  aliases.toml  expected.json  parity.py  repos.toml  run.sh
benchmarks/precision/: README.md  corpus.toml  expected.json  labels.jsonl  precision.py  run.sh  test_zero_research.py  zero_research.py
demo/: package.json
demo/src/: DemoVideo.tsx  Root.tsx
docs/: agent-editor-integration.md  claude-code-integration.md  dependency-scanning.md  finding-contract.md  findings-noise-investigation.md  mcp-server.md  precision.md  release-provenance.md  taint-precision-gaps.md  taint-tracking.md
docs/parity/: context-source-shapes.md  go-skip-shapes.md  php-csharp-skip-shapes.md  registry-coverage.md  taint-labels-design.md
plugins/claude-code/: MARKETPLACE.md  README.md
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/hooks/: hooks.json
plugins/claude-code/scripts/: scan-edited-file.sh  secure-defaults.txt
rules/: README.md
rules/cardano/: haskell-seeds.yaml
rules/kernel/dirty-frag-class/: README.md  esp-shared-frag-decrypt-guard-codeql.yaml  (+5 more)
schemas/: finding-v1.schema.json
scripts/: linux-codeql-dirty-frag.sh  release.sh  render-homebrew-formula.sh  smoke-github-app-image.sh  verify-vscode-marketplace.mjs  verify-vscode-marketplace.test.mjs
src/: adapter.rs  app.rs  baseline.rs  certscan.rs  cli.rs  compliance.rs  config.rs  deps.rs  diff.rs  git.rs  lib.rs  main.rs  path_identity.rs  scan_plan.rs  secrets.rs  tui.rs
src/engine/: coccinelle.rs  codeql.rs  mod.rs  parser.rs  process.rs  scanner.rs
src/fix/: command_injection.rs  mod.rs  sql_injection.rs  xss.rs
src/github_app/: README.md  auth.rs  installation_store.rs  mod.rs  review.rs  webhook.rs
src/output/: mod.rs
src/report/: cbom.rs  github_pr.rs  json.rs  mod.rs  sarif.rs  semgrep_json.rs  terminal.rs
src/rules/: apex.rs  apex_taint.rs  bash.rs  bash_taint.rs  c.rs  c_taint.rs  common.rs  config.rs  cross_file.rs  csharp.rs  csharp_taint.rs  generic_mode.rs  go.rs  go_taint.rs  java.rs  java_taint.rs  javascript.rs  javascript_taint.rs  kotlin.rs  kotlin_taint.rs  manifest.rs  mod.rs  php.rs  php_taint.rs  pq.rs  python.rs  python_aliases.rs  python_taint.rs  ruby.rs  ruby_taint.rs  rust_lang.rs  scala.rs  scala_taint.rs  semgrep_compat.rs  semgrep_taint.rs  solidity.rs  solidity_taint.rs  swift.rs  swift_taint.rs  taint_engine.rs
src/tui/: input.rs  mod.rs  state.rs  tests.rs  views.rs  widgets.rs
tests/: ast_rule_batch_bench.rs  changed_files_from.rs  cnsa2_compliance.rs  coccinelle_integration.rs  cross_language_matrix.rs  fp_secret_names.rs  integration.rs  kernel_dirty_frag.rs  mcp_server.rs  pqc_readiness.rs  process_wrapper.rs  realistic_fixtures.rs  release_provenance.rs  rule_inventory.rs  semgrep_compat_bench.rs  semgrep_integration.rs  semgrep_parity.rs  semgrep_parity_c.rs  semgrep_parity_generic.rs  semgrep_parity_go.rs  semgrep_parity_haskell.rs  semgrep_parity_hcl.rs  semgrep_parity_inverse.rs  semgrep_parity_java.rs  semgrep_parity_javascript.rs  semgrep_parity_kotlin.rs  semgrep_taint_precision.rs  swift_safe.rs
tests/common/: mod.rs  semgrep_parity_harness.rs
tests/contracts/: native-report-v1.json
tests/fixtures/: safe.cs  safe.go  safe.hs  safe.java  safe.js  safe.kt  safe.php  safe.py  safe.rb  safe.rs  safe.swift  safe_apex_taint.cls  safe_bash_taint.sh  safe_c_taint.c  safe_cli_taint.py  safe_crypto_agility.java  safe_crypto_agility.js  safe_crypto_agility.py  safe_csharp_taint.cs  safe_deno_taint.ts  safe_django_taint.py  safe_fastapi_taint.py  safe_go_taint.go  safe_hono_taint.ts  safe_java_taint.java  safe_js_taint.js  safe_nextjs_taint.ts  safe_php_taint.php  safe_pq_draft.go  safe_pq_draft.java  safe_pq_draft.js  safe_pq_draft.py  safe_pq_draft.rs  safe_py_aliases.py  safe_py_fp.py  safe_py_taint.py  safe_python_subprocess_argv.py  safe_ruby_taint.rb  safe_scala_taint.scala  safe_secret_names.cs  (+43 more)
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts  extractFindings.test.ts  supportedFiles.test.ts  supportedFiles.ts
www/: README.md  astro.config.mjs  package-lock.json  package.json
www/public/: install.sh  robots.txt
(+175 files in other folders)
