[package]
name = "foxguard"
version = "0.1.0"
edition = "2021"
description = "Fast local security guard for changed files, built-in rules, and Semgrep-compatible YAML."
license = "MIT"
repository = "https://github.com/peaktwilight/foxguard"
homepage = "https://foxguard.dev"
keywords = ["security", "linter", "static-analysis", "sast", "vulnerability"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
walkdir = "2"
rayon = "1"
ignore = "0.4"
regex = "1"
serde_yaml = "0.9"
sha2 = "0.10"
globset = "0.4"

[dev-dependencies]
tempfile = "3"
