[package]
name = "foxguard"
version = "0.3.1"
edition = "2021"
description = "Security scanner as fast as a linter. 118 built-in rules, 10 languages, sub-second scans."
license = "MIT"
repository = "https://github.com/peaktwilight/foxguard"
homepage = "https://foxguard.dev"
keywords = ["security", "linter", "static-analysis", "sast", "vulnerability"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-java = "0.23"
tree-sitter-php = "0.24"
tree-sitter-rust = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-swift = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
walkdir = "2"
rayon = "1"
ignore = "0.4"
regex = "1"
serde_yaml = "0.9"
sha2 = "0.10"
globset = "0.4"

[dev-dependencies]
tempfile = "3"
